# MSH_Tanazania_paper

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: MSHTanzaniaReads.csv  MSHTanzaniaReads_SB.csv  predictions_mshtv1.csv  test_set_with_msh.csv  training_TFDA-analyst-certification-samples_proficiency-samples.csv
data/MSHTanzaniaReads_files/: Analyst_21_Tanzania.csv  Analyst_22_Tanzania.csv  Analyst_23_Tanzania.csv  Analyst_24_Tanzania.csv  Analyst_25_Tanzania.csv  Analyst_26_Tanzania.csv  Analyst_27_Tanzania.csv  Analyst_28_Tanzania.csv  Analyst_29_Tanzania.csv  Analyst_30_Tanzania.csv  Analyst_31_Tanzania.csv  Analyst_32_Tanzania.csv  Analyst_33_Tanzania.csv  Analyst_34_Tanzania.csv  Analyst_35_Tanzania.csv  Analyst_36_Tanzania.csv  Analyst_37_Tanzania.csv  Analyst_38_Tanzania.csv  Analyst_39_Tanzania.csv  Analyst_40_Tanzania.csv
docs/: MHS‐Tanzania-NN-Results.md
notebooks/: MSHTanzaniaReads_mapping_test_dataset.ipynb
