[project]
name = "msh-tanzania-paper"
version = "0.1.0"
description = "Analysis of MSH Tanzania PAD drug testing data"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipywidgets>=8.0.0",
    "openpyxl>=3.1.0",
    "scikit-learn>=1.3.0",
    "requests>=2.25.0",
    "pillow>=9.0.0",
    "tensorflow>=2.15.0",
    "keras>=2.15.0",
    "opencv-python>=4.11.0.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
